--- a/app/src/main/res/layout/fragment_course_selection.xml
+++ b/app/src/main/res/layout/fragment_course_selection.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_50dp"
                 android:drawablePadding="@dimen/dp_10"
                 android:text="强度选择"
                 android:textColor="@color/black"
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:overScrollMode="never"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10" />
+                android:layout_marginTop="@dimen/dimen_20dp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
