--- a/app/src/main/res/layout/fragment_home_one.xml
+++ b/app/src/main/res/layout/fragment_home_one.xml
@@ -294,9 +294,21 @@
 
                         </LinearLayout>
 
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:src="@mipmap/ic_sanjian_z" />
+
                         <View
                             android:layout_width="154dp"
                             android:layout_height="wrap_content" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:src="@mipmap/ic_sanjiao_y" />
 
                         <LinearLayout
                             android:layout_width="0dp"
