--- a/app/src/main/res/drawable/line_stroke_f.xml
+++ b/app/src/main/res/drawable/line_stroke_f.xml
@@ -3,10 +3,10 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_f2" />
+        android:color="@color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="#AAAAAA"
+        android:color="@color/transparent"
         android:dashWidth="3dp"
         android:dashGap="@dimen/dimen_5dp" />
 </shape>
