--- a/app/src/main/res/layout/activity_course_pattern.xml
+++ b/app/src/main/res/layout/activity_course_pattern.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_ffffff"
@@ -92,6 +91,12 @@
                 android:layout_marginTop="@dimen/dimen_25dp"
                 android:background="@drawable/ic_shade_img">
 
+                <ProgressBar
+                    android:id="@+id/vertical_progressbar"
+                    style="@style/Widget.ProgressBar.Vertical"
+                    android:progress="80"
+                    android:layout_width="12dip"
+                    android:layout_height="300dip" />
 
             </RelativeLayout>
 
