--- a/app/src/main/res/layout/activity_task_finish.xml
+++ b/app/src/main/res/layout/activity_task_finish.xml
@@ -179,6 +179,7 @@
                     android:background="@drawable/bj_shape_line_theme_2">
 
                     <TextView
+                        android:id="@+id/tv_xz"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -189,13 +190,293 @@
                         android:textSize="16sp" />
                 </RelativeLayout>
 
-                <com.github.mikephil.charting.charts.PieChart
-                    android:id="@+id/chart"
-                    android:layout_width="@dimen/dimen_300dp"
-                    android:layout_height="@dimen/dimen_300dp"
+
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/chart1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rl" />
+
+                <LinearLayout
+                    android:id="@+id/ll_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_below="@id/rl"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="@dimen/dimen_20dp" />
+                    android:layout_marginTop="@dimen/dimen_20dp"
+                    android:visibility="gone">
+
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/vertical_progressbar1"
+                            style="@style/Widget.ProgressBar.Vertical"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:progress="80" />
+
+                        <View
+                            android:id="@+id/view1"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:layout_marginStart="@dimen/dimen_5dp"
+                            android:layout_toEndOf="@id/vertical_progressbar1"
+                            android:background="@drawable/progress_task_finish_bg" />
+
+
+                        <TextView
+                            android:id="@+id/tv_bfb1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/view1"
+                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:text="25%"
+                            android:textColor="#282C37"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_sj1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_bfb1"
+                            android:text="25min"
+                            android:textColor="@color/color_666666"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_sj1"
+                            android:drawableStart="@drawable/icon_task_7x"
+                            android:drawablePadding="@dimen/common_margin_2"
+                            android:text="50~60%"
+                            android:textColor="#FFB300"
+                            android:textSize="9sp" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/vertical_progressbar2"
+                            style="@style/Widget.ProgressBar.Vertical"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:progress="40" />
+
+                        <View
+                            android:id="@+id/view2"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:layout_marginStart="@dimen/dimen_5dp"
+                            android:layout_toEndOf="@id/vertical_progressbar2"
+                            android:background="@drawable/progress_task_finish_bg" />
+
+
+                        <TextView
+                            android:id="@+id/tv_bfb2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/view2"
+                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:text="25%"
+                            android:textColor="#282C37"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_sj2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_bfb2"
+                            android:text="25min"
+                            android:textColor="@color/color_666666"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_sj2"
+                            android:drawableStart="@drawable/icon_task_7x"
+                            android:drawablePadding="@dimen/common_margin_2"
+                            android:text="50~60%"
+                            android:textColor="#FFB300"
+                            android:textSize="9sp" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/vertical_progressbar3"
+                            style="@style/Widget.ProgressBar.Vertical"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:progress="80" />
+
+                        <View
+                            android:id="@+id/view3"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:layout_marginStart="@dimen/dimen_5dp"
+                            android:layout_toEndOf="@id/vertical_progressbar3"
+                            android:background="@drawable/progress_task_finish_bg" />
+
+
+                        <TextView
+                            android:id="@+id/tv_bfb3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/view3"
+                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:text="25%"
+                            android:textColor="#282C37"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_sj3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_bfb3"
+                            android:text="25min"
+                            android:textColor="@color/color_666666"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_sj3"
+                            android:drawableStart="@drawable/icon_task_7x"
+                            android:drawablePadding="@dimen/common_margin_2"
+                            android:text="50~60%"
+                            android:textColor="#FFB300"
+                            android:textSize="9sp" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/vertical_progressbar4"
+                            style="@style/Widget.ProgressBar.Vertical"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:progress="40" />
+
+                        <View
+                            android:id="@+id/view4"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:layout_marginStart="@dimen/dimen_5dp"
+                            android:layout_toEndOf="@id/vertical_progressbar4"
+                            android:background="@drawable/progress_task_finish_bg" />
+
+
+                        <TextView
+                            android:id="@+id/tv_bfb4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/view4"
+                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:text="25%"
+                            android:textColor="#282C37"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_sj4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_bfb4"
+                            android:text="25min"
+                            android:textColor="@color/color_666666"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_sj4"
+                            android:drawableStart="@drawable/icon_task_7x"
+                            android:drawablePadding="@dimen/common_margin_2"
+                            android:text="50~60%"
+                            android:textColor="#FFB300"
+                            android:textSize="9sp" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/vertical_progressbar5"
+                            style="@style/Widget.ProgressBar.Vertical"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:progress="40" />
+
+                        <View
+                            android:id="@+id/view5"
+                            android:layout_width="8dp"
+                            android:layout_height="130dp"
+                            android:layout_marginStart="@dimen/dimen_5dp"
+                            android:layout_toEndOf="@id/vertical_progressbar5"
+                            android:background="@drawable/progress_task_finish_bg" />
+
+
+                        <TextView
+                            android:id="@+id/tv_bfb5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/view5"
+                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:text="25%"
+                            android:textColor="#282C37"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_sj5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_bfb5"
+                            android:text="25min"
+                            android:textColor="@color/color_666666"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_sj5"
+                            android:drawableStart="@drawable/icon_task_7x"
+                            android:drawablePadding="@dimen/common_margin_2"
+                            android:text="50~60%"
+                            android:textColor="#FFB300"
+                            android:textSize="9sp" />
+
+                    </RelativeLayout>
+
+
+                </LinearLayout>
 
             </RelativeLayout>
 
