--- a/app/src/main/res/layout/item_association_list.xml
+++ b/app/src/main/res/layout/item_association_list.xml
@@ -347,6 +347,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rl_all_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/dimen_15dp">
