--- a/app/src/main/res/layout/activity_mine_integral.xml
+++ b/app/src/main/res/layout/activity_mine_integral.xml
@@ -168,6 +168,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_jfsc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/tv1"
