--- a/app/src/main/res/drawable/bj_circle_fff_50.xml
+++ b/app/src/main/res/drawable/bj_circle_fff_50.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/dimen_25dp" />
-    <solid android:color="#B3ffffff" />
+    <corners android:radius="@dimen/dimen_50dp" />
+    <solid android:color="@color/color_ffffff" />
 
 </shape>
