--- a/app/src/main/res/layout/dialog_out_room.xml
+++ b/app/src/main/res/layout/dialog_out_room.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:id="@+id/ll"
         android:layout_width="225dp"
+        android:layout_marginTop="50dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:background="@drawable/bj_circle_fff_20"
