--- a/app/src/main/res/layout/activity_facility_add_pp.xml
+++ b/app/src/main/res/layout/activity_facility_add_pp.xml
@@ -44,9 +44,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_all_list"
                 android:layout_width="match_parent"
-                android:overScrollMode="never"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_15dp" />
+                android:layout_marginTop="@dimen/dimen_15dp"
+                android:overScrollMode="never" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -82,6 +82,39 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/ble_cmd_edit1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:text="0x00"
+                    android:layout_weight="1.0"
+                    android:hint="自定义命令" />
+
+                <Button
+                    android:id="@+id/send_btn1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1.0"
+                    android:text="发送命令" />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/show_msg_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:text=""
+                android:textSize="10pt" />
             <LinearLayout
                 android:id="@+id/ll_connect"
                 android:layout_width="match_parent"
