--- a/app/src/main/res/layout/activity_task_start.xml
+++ b/app/src/main/res/layout/activity_task_start.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_ffffff"
@@ -108,14 +109,23 @@
 
         </LinearLayout>
 
-        <Button
+        <cn.forward.androids.views.MaskImageView
             android:id="@+id/btn_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:background="@mipmap/icon_start_d"
-            android:layout_marginTop="@dimen/dimen_30dp" />
-
+            android:layout_marginTop="@dimen/dimen_30dp"
+            android:clickable="true"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_start_d"
+            app:miv_is_ignore_alpha="true"
+            app:miv_mask_color="#88000000"
+            app:miv_mask_level="foreground"
+            app:sel_background_corner_bottomRight="30dp"
+            app:vp_content_height="60dp"
+            app:vp_content_padding_bottom="0dp"
+            app:vp_content_padding_left="0dp"
+            app:vp_content_width="60dp" />
 
     </RelativeLayout>
 
