--- a/app/src/main/res/layout/item_img.xml
+++ b/app/src/main/res/layout/item_img.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="@dimen/dp_10"
-        android:src="@mipmap/ic_1" />
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bj_circle_line_theme">
+
+
+        <com.jxkj.fit_5a.conpoment.view.RoundImageView
+            android:id="@+id/iv_img"
+            android:layout_width="@dimen/dimen_80dp"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_margin="@dimen/dimen_2dp"
+            android:scaleType="fitXY"
+            android:src="@mipmap/ic_7"
+            app:type="circle" />
+
+        <ImageView
+            android:id="@+id/iv_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/iv_img"
+            android:visibility="gone"
+            android:layout_margin="@dimen/dimen_5dp"
+            android:src="@drawable/ic_interest_select" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
