--- a/app/src/main/res/layout/item_course_selection.xml
+++ b/app/src/main/res/layout/item_course_selection.xml
@@ -7,6 +7,7 @@
     android:padding="@dimen/dimen_20dp">
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="热身模式"
@@ -15,6 +16,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tv_sub_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_5dp"
