--- a/app/src/main/res/layout/item_user_lw_mine.xml
+++ b/app/src/main/res/layout/item_user_lw_mine.xml
@@ -13,6 +13,7 @@
         android:gravity="center">
 
         <ImageView
+            android:id="@+id/iv_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_17" />
