--- a/app/src/main/res/layout/item_user_lw_shou.xml
+++ b/app/src/main/res/layout/item_user_lw_shou.xml
@@ -13,6 +13,7 @@
         android:gravity="center">
 
         <ImageView
+            android:id="@+id/iv_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_17" />
@@ -44,6 +45,7 @@
             android:textSize="8sp" />
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_user"
