--- a/app/src/main/res/layout/item_user_lw_song.xml
+++ b/app/src/main/res/layout/item_user_lw_song.xml
@@ -7,6 +7,7 @@
     android:padding="@dimen/dimen_12dp">
 
     <ImageView
+        android:id="@+id/iv_img"
         android:layout_width="66dp"
         android:layout_height="66dp"
         android:layout_margin="@dimen/dp_10"
@@ -49,6 +50,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_user"
@@ -57,6 +59,7 @@
             android:textSize="10sp" />
 
         <TextView
+            android:id="@+id/tv_worth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
