--- a/app/src/main/res/layout/activity_task_sign.xml
+++ b/app/src/main/res/layout/activity_task_sign.xml
@@ -94,6 +94,7 @@
                 android:padding="@dimen/dp_10">
 
                 <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@id/iv_show_type"
