--- a/app/src/main/res/layout/activity_mine_info.xml
+++ b/app/src/main/res/layout/activity_mine_info.xml
@@ -12,7 +12,7 @@
         android:background="@mipmap/ic_mine_top">
 
         <ImageView
-            android:id="@+id/iv"
+            android:id="@+id/iv_backImg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -20,10 +20,11 @@
             android:visibility="invisible" />
 
         <ImageView
+            android:id="@+id/iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignTop="@id/iv"
-            android:layout_alignBottom="@id/iv"
+            android:layout_alignTop="@id/iv_backImg"
+            android:layout_alignBottom="@id/iv_backImg"
             android:adjustViewBounds="true"
             android:background="@drawable/btn_shape_bj_f7f" />
 
@@ -120,9 +121,8 @@
                         android:gravity="center_vertical">
 
                         <TextView
-                            android:layout_width="0dp"
+                            android:layout_width="@dimen/dimen_140dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:drawableStart="@drawable/ic_mine_info3"
                             android:drawablePadding="@dimen/dp_10"
                             android:gravity="center_vertical"
@@ -134,12 +134,13 @@
 
                         <TextView
                             android:id="@+id/tv_info_2"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/dp_10"
                             android:drawableEnd="@drawable/icon_jiantou_you_99"
                             android:drawablePadding="@dimen/dp_10"
                             android:padding="@dimen/dp_10"
+                            android:gravity="end"
                             android:text=""
                             android:textColor="@color/color_999999"
                             android:textSize="14sp" />
