--- a/app/src/main/res/layout/item_home_sign_hdrw.xml
+++ b/app/src/main/res/layout/item_home_sign_hdrw.xml
@@ -23,6 +23,7 @@
         android:src="@drawable/icon_sign_xx" />
 
     <TextView
+        android:id="@+id/tv_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
