--- a/app/src/main/res/layout/item_home_sign_rcrw.xml
+++ b/app/src/main/res/layout/item_home_sign_rcrw.xml
@@ -25,6 +25,7 @@
         android:progressDrawable="@drawable/progress_bar_bg" />
 
     <TextView
+        android:id="@+id/tv_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title"
